--- a/bib-file.bib
+++ b/bib-file.bib
@@ -79,14 +79,16 @@ references:
 Support vector machines\cite{VargasLopez2021AnEM}
 Recurrent Neural Networks\cite{Arras2017ExplainingRN}
 Convolutional Neural Networks\cite{Tan2019EfficientNetRM}\cite{Hughes2021PerformanceOA}
-Deep Networks \cite{pmlr-v70-sundararajan17a}
+Deep Networks \cite{https://doi.org/10.48550/arxiv.1703.01365}
 Partial Dependence plots (PDP) \cite{Friedman_1991}
 Individual Conditional Expectation (ICE) plots\cite{Goldstein_Kapelner_Bleich_Pitkin}
 Accumulated Local Effects (ALE) plot \cite{https://doi.org/10.48550/arxiv.1612.08468} 
-Saliency Maps\cite{Simonyan2014DeepIC} \cite{Hong2015OnlineTB} \cite{Liu2018PiCANetLP} \cite{Liu2018PiCANetLP}
+Saliency Maps\cite{Simonyan2014DeepIC} \cite{Hong2015OnlineTB} \cite{Liu2018PiCANetLP} 
 Decision Set \cite{10.1145/2939672.2939874}
 Bayesian Analysis \cite{ Letham_Rudin_McCormick_Madigan_2015}
 LIME \cite{Ribeiro_Singh_Guestrin_2016}
 Anchor \cite{anchors:aaai18}
-Shapley Calues \cite{shapley1953value}
+Shapley Values \cite{shapley1953value}
 SHAP \cite{https://doi.org/10.48550/arxiv.1705.07874} \cite{Lundberg_Erion_Chen_DeGrave_Prutkin_Nair_Katz_Himmelfarb_Bansal_Lee_2020}
+	}
+ @article{Rudin_2019, title={Stop explaining black box machine learning models for high stakes decisions and use interpretable models instead}, volume={1}, ISSN={2522-5839}, DOI={10.1038/s42256-019-0048-x}, abstractNote={Black box machine learning models are currently being used for high-stakes decision making throughout society, causing problems in healthcare, criminal justice and other domains. Some people hope that creating methods for explaining these black box models will alleviate some of the problems, but trying to explain black box models, rather than creating models that are interpretable in the first place, is likely to perpetuate bad practice and can potentially cause great harm to society. The way forward is to design models that are inherently interpretable. This Perspective clarifies the chasm between explaining black boxes and using inherently interpretable models, outlines several key reasons why explainable black boxes should be avoided in high-stakes decisions, identifies challenges to interpretable machine learning, and provides several example applications where interpretable models could potentially replace black box models in criminal justice, healthcare and computer vision.}, number={55}, journal={Nature Machine Intelligence}, publisher={Nature Publishing Group}, author={Rudin, Cynthia}, year={2019}, month={May}, pages={206–215}, language={en} }
